--- a/app-source/i18n/en/notecontextmenu.json
+++ b/app-source/i18n/en/notecontextmenu.json
@@ -1,11 +1,8 @@
 {
-  "cut": "Cut",
-  "copy": "Copy",
-  "paste": "Paste",
+  "paragraph": "Paragraph Styles",
   "entities": {
     "entities": "Encode / Decode Entites",
     "encode": "Encode Entities",
     "decode": "Decode Entities"
-  },
-  "paragraph": "Paragraph Styles"
+  }
 }
