fix german translation

--- a/app-source/i18n/de/menu.json
+++ b/app-source/i18n/de/menu.json
@@ -28,7 +28,7 @@
     "cut": "Ausschneiden",
     "copy": "Kopieren",
     "paste": "Einfügen",
-    "match": "Paste and Match Style",
+    "match": "Einfügen und an Formatierung anpassen",
     "delete": "Löschen",
     "selectall": "Alles auswählen",
     "find": "Suchen…",
